# scrape-coins

./: .env.example  .gitignore  README.md  app.py  config.yaml  pyproject.toml
api/: __init__.py  main.py
scripts/: backfill_images.py  backfill_names.py
src/: app.py
src/scrape_coins/: __init__.py  classifier.py  cli.py  config.py  db.py  export_csv.py  logging_setup.py  scheduler.py  scoring.py  vercel_demo_seed.py
src/scrape_coins/clients/: _rate.py  dexscreener.py  helius.py
src/scrape_coins/web/: app.py
src/scrape_coins/web/static/: style.css
src/scrape_coins/web/templates/: base.html  coin.html  index.html
src/scrape_coins/workers/: backfill.py  discovery.py  enrich.py  snapshot.py
