[project]
name = "scrape-coins"
version = "0.1.0"
description = "Find Solana coins that hit $300k–$5M MC then died (likely from team failure, not concept failure) — surface as redeploy candidates."
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]>=0.27",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "greenlet>=3.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "apscheduler>=3.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "typer>=0.12",
    "rich>=13.7",
    "structlog>=24.1",
    "tenacity>=8.4",
]

[project.scripts]
scrape-coins = "scrape_coins.cli:app"
app = "api.main:app"

[tool.vercel]
entrypoint = "api.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrape_coins", "api"]

[tool.ruff]
line-length = 100
target-version = "py311"
